[package]
name = "vulkan_on_wear_os"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 3

[lib]
crate-type = ["cdylib"]

[dependencies]
hikari_render = {path = "vendor/Hikari/crates/hikari_render"}
hikari_math = {path = "vendor/Hikari/crates/hikari_math"}
android-activity = { version = "0.6", features = [ "native-activity" ] }
android_logger = "0.15.1"
log = "0.4.29"
winit = "0.30"


[package.metadata.android]
use_aapt2 = true
package = "com.ax9d"
build_targets = [ "armv7-linux-androideabi" ]
apk_name = "hikari"
strip = "default"
shared_user_id = "my.shared.user.id"

[package.metadata.android.sdk]
min_sdk_version = 24
target_sdk_version = 36
max_sdk_version = 36


[[package.metadata.android.uses_feature]]
name = "android.hardware.vulkan.level"
required = true
version = 1

# Add WAKE_LOCK permission
[[package.metadata.android.uses_permission]]
name = "android.permission.WAKE_LOCK"

[[package.metadata.android.uses_permission]]
name = "android.permission.WRITE_EXTERNAL_STORAGE"
max_sdk_version = 36

[[package.metadata.android.queries.intent]]
actions = ["android.intent.action.SEND"]

[[package.metadata.android.queries.intent.data]]
mime_type = "image/jpeg"


[package.metadata.android.application]
debuggable = false
theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"
label = "Application Name"
extract_native_libs = true
uses_cleartext_traffic = true


# Manifest override to keep screen on
[package.metadata.android.manifest]
# This XML snippet is merged into AndroidManifest.xml
# Adds keepScreenOn on the Activity's window
application = """
    <activity android:name="android.app.NativeActivity"
              android:label="Application Name"
              android:exported="true">
        <meta-data android:name="android.app.lib_name"
                   android:value="vulkan_on_wear_os" />

        <!-- Prevent screen from turning off -->
        <intent-filter>
            <action android:name="android.intent.action.MAIN" />
            <category android:name="android.intent.category.LAUNCHER" />
        </intent-filter>

        <meta-data android:name="android.windowSoftInputMode"
                   android:value="stateHidden" />

        <!-- Keep the screen on -->
        <meta-data android:name="android.keepScreenOn"
                   android:value="true" />
    </activity>
"""